changed some backgrounds

--- a/styles.css
+++ b/styles.css
@@ -538,7 +538,7 @@ footer {
     }
     
     #added-recipes {
-      background-color:#141415;
+      background-color:#ffffff;
       padding: 40px 0;
       width: auto;
     }
